fix delay for overflow when animation goes to idle

--- a/src/Views/Global.css
+++ b/src/Views/Global.css
@@ -2,7 +2,7 @@
   background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(255, 0, 0, 0.2) 56.46%), linear-gradient(152.38deg, #3650AB 50.76%, rgba(60, 147, 174, 0.97) 94.26%);
   width: 100%;
   height: 100vh;
-  /* overflow: hidden; */
+  overflow: hidden;
 }
 
 .global > div {
